JavaFX UI working great...